@@ -3,6 +3,10 @@ Changes between 3.4 and 3.5:
   * Print bitrate status for each service
   * Fix passing through the EITp/f without EPG tables (broken in 3.3)
   * Add new option --udp-lock-timeout
+  * Use newer linux-dvb API to get signal statistics
+  * Add support for descrambling cards with UDP/RTP input
+  * Use DTV_SCRAMBLING_SEQUENCE_INDEX for DVB-S2 multistream
+  * Add support for DVB-S2 raw BBFrame demuxing
 
 Changes between 3.3 and 3.4:
 ----------------------------
